<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/normal_map"
        android:id="@+id/normal_map"
        android:icon="@drawable/ic_map_black_24dp"
        app:showAsAction="never"/>

    <item
        android:title="@string/hybrid_map"
        android:icon="@drawable/ic_layers_black_24dp"
        android:id="@+id/hybrid_map"
        app:showAsAction="never"/>

    <item
        android:title="@string/satellite_map"
        android:id="@+id/satellite_map"
        android:icon="@drawable/ic_satellite_black_24dp"
        app:showAsAction="never"/>

    <item
        android:title="@string/terrain_map"
        android:id="@+id/terrain_map"
        android:icon="@drawable/ic_terrain_"
        app:showAsAction="never"/>

</menu>