<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorToolbar"
    android:padding="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/exibits_text_layout"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exhibits"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            android:background="@color/colorToolbar"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="24sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:text="@string/exhibits_text"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_keyboard_arrow_up_black_24dp"
        android:id="@+id/arrow_up_"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/arrow_down"
        android:visibility="gone"
        android:id="@+id/arrow_down_"/>


    <ScrollView
        android:id="@+id/scrolle_view_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorToolbar"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_bulbs"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="21sp"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/electric_light1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/light_bulbs_text"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display_of_the_electro"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="21sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:layout_margin="8dp"
            android:src="@drawable/electric_lignt2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/discover_the_path"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/windmill"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="21sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:layout_margin="8dp"
            android:src="@drawable/electric_lignt3" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/wind_text"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/van_de_graaff"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="21sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:layout_margin="8dp"
            android:src="@drawable/electric_lignt4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/degraf_text"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plasma_ball"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="21sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:layout_margin="8dp"
            android:src="@drawable/plazma_balll" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/plazma_text"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>


    </LinearLayout>
    </ScrollView>


</LinearLayout>