<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorToolbar"
    android:padding="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolbar"
        android:text="@string/history"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:text="@string/history_text"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="fitXY"
                android:layout_gravity="end"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/istoria_1" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history1_text"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/istoria_2" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@android:color/white"
                android:text="@string/history2_text"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/istoria_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@android:color/white"
                android:text="@string/history3_text"/>

        </LinearLayout>


    </ScrollView>




</LinearLayout>