<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorToolbar"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolbar"
        android:text="@string/for_the_centar_fHome"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="italic"
        android:textSize="16dp"
        android:text="@string/Welcome_titile"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="12dp"
                android:scaleType="fitXY"
                android:src="@drawable/museum"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:text="@string/for_the_centar"/>

        </LinearLayout>


    </ScrollView>

</LinearLayout>