<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/matka"
    android:orientation="vertical"
    tools:context=".ContactActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorToolbar"
        android:id="@+id/toolbar_homeAcv"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp">
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorVideoLayout"
        android:orientation="vertical"
        android:padding="16dp"
       >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/working_hours"
            android:background="@color/colorToolbar"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_marginBottom="16dp"
            android:textSize="24sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_event_calendar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/april_october"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_time"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/_10_00_a_m_03_00_p_m"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_except"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginBottom="24dp"
            android:text="@string/every_day_except_on_mondays"
            android:textSize="18sp"/>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorToolbar"
            android:text="@string/contact"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_marginBottom="16dp"
            android:textSize="24sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location_"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saraj_matka"
                android:layout_marginBottom="16dp"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/phone_dial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_local_phone_"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tel_072_935_105"
                android:layout_marginBottom="16dp"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

        </LinearLayout>

            <ImageView
                android:id="@+id/evn_mk"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/evn" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:gravity="bottom|end"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/facebook_open"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"

                android:src="@drawable/face" />

            <ImageView
                android:id="@+id/instagram_open"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:src="@drawable/i" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>